PWA対応&デザイン修正

--- a/src/components/Place.module.css
+++ b/src/components/Place.module.css
@@ -1,7 +1,7 @@
 .place {
-    height: 50px;
+    height: 60px;
     position: relative;
-    width: 100%;
+    width: calc(300px * 12);
 }
 
 .hot_stage{
